// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Obscure default 1`] = `
.c0 {
  padding: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0 "
>
  <span
    className=""
  >
    •••••••••
  </span>
</div>
`;

exports[`Storyshots Obscure util props 1`] = `
.c0 {
  padding: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  font-family: Circular,sans-serif;
  font-size: 24px;
  line-height: 1.33;
  font-weight: 400;
}

<div
  className="c0 "
>
  <span
    className="c1"
  >
    •••••••89
  </span>
</div>
`;

exports[`Storyshots Obscure visibleCount 1`] = `
.c0 {
  padding: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0 "
>
  <span
    className=""
  >
    •••••••89
  </span>
</div>
`;

exports[`Storyshots ObscureToggle custom 1`] = `
.c0 {
  padding: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  margin-left: 8px;
}

.c3 {
  text-decoration: none;
  color: #009BC0;
  cursor: pointer;
}

.c3:link,
.c3:visited {
  color: #009BC0;
}

.c3:hover {
  color: #0081AA;
}

.c3:active {
  color: #144E6F;
}

.c1 {
  vertical-align: bottom;
}

.c2 {
  font-size: 80%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div
  className="c0 "
>
  <span
    className="c1 "
  >
    <span
      className=""
    >
      •••••••89
    </span>
    <a
      className="c2 c3 c4"
      href="#"
      onClick={[Function]}
      rel="noreferrer noopener "
    >
      Show
    </a>
  </span>
</div>
`;

exports[`Storyshots ObscureToggle ssn 1`] = `
.c0 {
  padding: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  margin-left: 8px;
}

.c3 {
  text-decoration: none;
  color: #009BC0;
  cursor: pointer;
}

.c3:link,
.c3:visited {
  color: #009BC0;
}

.c3:hover {
  color: #0081AA;
}

.c3:active {
  color: #144E6F;
}

.c1 {
  vertical-align: bottom;
}

.c2 {
  font-size: 80%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div
  className="c0 "
>
  <span
    className="c1 "
  >
    <span
      className=""
    >
      •••••6789
    </span>
    <a
      className="c2 c3 c4"
      href="#"
      onClick={[Function]}
      rel="noreferrer noopener "
    >
      Show
    </a>
  </span>
</div>
`;

exports[`Storyshots ObscureToggle util props 1`] = `
.c0 {
  padding: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-family: Circular,sans-serif;
  font-size: 24px;
  line-height: 1.33;
  font-weight: 400;
}

.c5 {
  margin-left: 8px;
}

.c4 {
  text-decoration: none;
  color: #009BC0;
  cursor: pointer;
}

.c4:link,
.c4:visited {
  color: #009BC0;
}

.c4:hover {
  color: #0081AA;
}

.c4:active {
  color: #144E6F;
}

.c1 {
  vertical-align: bottom;
}

.c3 {
  font-size: 80%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div
  className="c0 "
>
  <span
    className="c1 c2"
  >
    <span
      className=""
    >
      •••••6789
    </span>
    <a
      className="c3 c4 c5"
      href="#"
      onClick={[Function]}
      rel="noreferrer noopener "
    >
      Show
    </a>
  </span>
</div>
`;
